<resources>
    <string name="app_name">MazinTask</string>
    <string name="label_alert">Alert</string>
    <string name="label_back">Back</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_please_wait">Please Wait…</string>
    <string name="label_email">Email</string>
    <string name="label_search">Search</string>
</resources>
